# physics-guided-ai-adaptive-photon-lidar

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-manuscript.yml  test-final-experiment.yml
configs/: base.yaml
configs/experiment/: final_short_comm.yaml  final_short_comm_fast.yaml  short_communication.yaml
configs/physics/: journal_grade.yaml
docs/decisions/: decision-log.md
docs/protocols/: experiment-protocol.md
docs/research-notes/: final-short-communication-scope.md  hypotheses.md  novelty-statement.md  short-communication-scope.md
manuscript/: manuscript.tex  references.bib
manuscript/figures/: figure-plan.md
manuscript/literature/: citation-placement.md  core-reference-map.md
manuscript/sections/: abstract.tex  conclusion.tex  data-code-availability.tex  discussion.tex  introduction.tex  limitations.tex  methodology.tex  results.tex
manuscript/submission/: cover-letter.txt  declarations.tex  graphical-abstract-plan.md  highlights.txt  manuscript-parameter-audit.txt  results-provenance.md  source-parameter-extract.txt  submission-checklist.md
manuscript/tables/: simulation_parameters.tex
reports/: baseline_commit.txt  experiment-registry.csv
reports/runpod/: physics-validation-template.md
scripts/analysis/: compare_baseline_policies.py  run_short_comm_final.py  summarize_short_comm_final.py  validate_journal_grade_model.py  validate_photon_physics.py
scripts/data/: simulate_single_return.py
scripts/runpod/: run_baseline_comparison.sh  run_final_short_comm.sh  (+5 more)
(+37 files in other folders)
