[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-guided-ai-adaptive-photon-lidar"
version = "0.1.0"
description = "Physics-guided AI for adaptive photon allocation in defense-oriented single-photon LiDAR."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Dr. Sai Krishna Thota"}
]
keywords = [
    "single-photon lidar",
    "adaptive sensing",
    "photon allocation",
    "physics-guided ai",
    "defense reconnaissance",
    "active optical sensing"
]

dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.8,<4.0",
    "scikit-learn>=1.4,<2.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.66,<5.0",
    "torch>=2.3",
    "torchvision>=0.18",
    "tensorboard>=2.16",
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyterlab>=4.2"
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
